router/uniform-router/file/go-server2/conf/virtual_service.yml
apiVersion: service.dubbo.apache.org/v1alpha1
kind: VirtualService
metadata: {name: demo-route}
spec:
  dubbo:
    # 使用正则表达式匹配service名，只有个满足该service名的请求才能路由。
    # 就此例子来说，不满足service名的请求会直接找不到provider
    - services:
      - { regex: org.apache.dubbo.UserProvider* }
      routedetail:
        # 匹配规则，如果（sourceLabel）客户端url满足存在参数 `trafficLabel: xxx` 的才能匹配成功
        - match:
            - sourceLabels: {trafficLabel: xxx}
          name: other-condition
          route: # 一旦匹配上述match规则，将选择dest_rule.yml里定义的名为other的子集
            - destination: {host: demo, subset: other}
        - name: center-match
          # 没有match，兜底逻辑，一定会被匹配到。
          route: # 将选择dest_rule.yml里定义的名为center的子集
            - destination: {host: demo, subset: center}

  hosts: [demo]  # 匹配dest_rule.yml里面的host
